<resources>
    <string name="app_name">aoeliyakei</string>
    <string name="app_name_debug" translatable="false">(debug)aoeliyakei</string>
    <string name="tweet_name_screenName" translatable="false">&lt;b>%1$s&lt;/b> \@%2$s</string>
    <string name="tweet_name_screenName_lines" translatable="false">&lt;b>%1$s&lt;/b>&lt;br>\@%2$s</string>
    <string name="tweet_screenName" translatable="false">\@%1$s</string>
    <string name="tweet_via" translatable="false">via %1$s</string>
    <string name="tweet_media_descs">user appending image of this tweet</string>
    <string name="desc_tweet_retweet_icon" translatable="false">Retweet icon</string>
    <string name="desc_tweet_favorite_icon" translatable="false">Favorite icon</string>
    <string name="desc_rt_user_icon" translatable="false">RT user icon</string>
    <string name="timeline_at" translatable="false">\@</string>
    <string name="update_status" translatable="false">Tweet</string>
    <string name="desc_icon" translatable="false">user icon</string>
    <string name="oauth_login">Login Twitter</string>

    <string name="navDesc_openDrawer">open nav drawer</string>
    <string name="navDesc_closeDrawer">close nav drawer</string>
    <string name="navDesc_cancelTweet">Cancel input tweet</string>

    <string name="detail_rt_create">RT</string>
    <string name="detail_rt_delete">cancel RT</string>
    <string name="detail_fav_create">fav</string>
    <string name="detail_fav_delete">cancel fav</string>
    <string name="detail_reply">reply</string>
    <string name="detail_quote">quote</string>
    <string name="desc_fling_indicator" translatable="false">action indicator</string>
    <string name="media_remain_time" translatable="false">%1$d:%2$02d</string>

    <string name="msg_rt_create_failed">RT failure…</string>
    <string name="msg_rt_create_success">RT successed</string>
    <string name="msg_rt_delete_success">RT destroyed</string>
    <string name="msg_rt_delete_failed">RT destroy failed…</string>
    <string name="msg_tweet_delete_success">tweet is destroyed</string>
    <string name="msg_tweet_delete_failed">failed to destroy tweet…</string>
    <string name="msg_fav_create_success">fav successed</string>
    <string name="msg_fav_create_failed">fav failure…</string>
    <string name="msg_fav_delete_failed">fav delete failure…</string>
    <string name="msg_fav_delete_success">fav destroy successed</string>
    <string name="msg_tweet_not_download">tweet was not downloaded…</string>
    <string name="msg_already_fav">already faved</string>
    <string name="msg_create_friendship_success">success followed</string>
    <string name="msg_create_friendship_failed">following failure…</string>
    <string name="msg_destroy_friendship_success">destroyed friendship</string>
    <string name="msg_destroy_friendship_failed">failed to destroy friendship…</string>
    <string name="msg_create_block_success">blocked</string>
    <string name="msg_create_block_failed">failed to block…</string>
    <string name="msg_destroy_block_success">destroyed block</string>
    <string name="msg_destroy_block_failed">failed to destroy block…</string>
    <string name="msg_report_spam_failed">failed to report spam…</string>
    <string name="msg_report_spam_success">reported spam</string>
    <string name="msg_create_mute_failed">failed to mute…</string>
    <string name="msg_create_mute_success">muted</string>
    <string name="msg_destroy_mute_failed">failed to unmute…</string>
    <string name="msg_destroy_mute_success">unmuted</string>
    <string name="msg_follower_list_failed">failed to fetch followers…</string>
    <string name="msg_friends_list_failed">failed to fetch friends…</string>
    <string name="msg_already_rt">already retweeted…</string>
    <string name="msg_block_retweet_failed">failed to block Retweet…</string>
    <string name="msg_block_retweet_success">blocked Retweet</string>
    <string name="msg_unblock_retweet_failed">failed to unblock RT…</string>
    <string name="msg_unblock_retweet_success">RT unblocked</string>
    <string name="msg_fetch_relationship_failed">failed to get friendship with this user…</string>
    <string name="msg_updateStatus_failed">failed to send tweet…</string>
    <string name="msg_updateStatus_success">tweeted</string>
    <string name="msg_userId_failed">failed to get User ID…</string>
    <string name="msg_faved_by_someone">your tweet was favoried by \@%1$s</string>
    <string name="msg_followed_by_someone">followed by \@%1$s</string>
    <string name="msg_retweeted_by_someone">your tweet was retweeted by \@%1$s</string>
    <string name="msg_no_next_page">there is no item any more…</string>
    <string name="msg_fetch_user_list_failed">failed to fetch user lists…</string>
    <string name="msg_oauth_fav">you can like the tweet.</string>
    <string name="msg_oauth_rt">you can retweet the tweet.</string>
    <string name="msg_oauth_favRt">you can like and RT with one fling!</string>
    <string name="msg_oauth_detail">you can see detail of the tweet.</string>
    <string name="msg_oauth_conv">you can read replied tweets.</string>
    <string name="msg_oauth_reply">you can reply to the tweet.</string>
    <string name="msg_oauth_quote">you can quote the tweets.</string>
    <string name="msg_oauth_user_icon">you can see the user information.</string>
    <string name="msg_oauth_success">authentication is success!</string>
    <string name="msg_oauth_failed">authentication is failed…</string>
    <string name="msg_media_failed_loading">failed to load media…</string>
    <string name="msg_media_failed_tweetNotFound">failed to load media: maybe the tweet was deleted…</string>

    <string name="action_totop">To Top</string>
    <string name="action_writeTweet">Write Tweet</string>
    <string name="action_sendTweet">Send Tweet</string>
    <string name="action_group_user">action for the user</string>
    <string name="action_follow">follow</string>
    <string name="action_unfollow">unfollow</string>
    <string name="action_block_retweet">block retweet</string>
    <string name="action_mute">mute</string>
    <string name="action_unmute">unmute</string>
    <string name="action_block">block</string>
    <string name="action_r4s">report for spam</string>
    <string name="action_unblock">unblock</string>
    <string name="action_unblock_retweet">unblock RT</string>
    <string name="action_resumeTweet">Resume Tweet</string>

    <string name="user_following">following</string>
    <string name="user_muting">muting</string>
    <string name="user_blocking">blocking</string>

    <string name="title_home">home</string>
    <string name="title_conv">conversation</string>
    <string name="title_detail">tweet</string>
    <string name="title_search">search</string>
    <string name="title_tweet">what\'s happening?</string>
    <string name="title_reply">reply</string>
    <string name="title_comment">comment</string>
    <string name="title_oauth">welcome</string>
    <string name="title_add_account">add registered account</string>
    <string name="title_settings">@string/drawer_menu_settings</string>
    <string name="title_owned_list">lists</string>

    <string name="media_chooser_title">choose to upload…</string>
    <string name="media_upload_delete">delete</string>

    <string name="drawer_menu_home">home</string>
    <string name="drawer_menu_license">OSS license</string>
    <string name="drawer_menu_add_account">add registered account</string>
    <string name="drawer_menu_settings">settings</string>

    <string name="lists">lists</string>

    <string name="oauth_hint_input_pin">input PIN code</string>
    <string name="oauth_send_pin">Send pin</string>
    <string name="oauth_demo_tweet">welcome to aoeliyakei! this is dummy tweet. you can select me and do action with circle button appearing below.</string>
    <string name="oauth_demo_quoted">you can select only quoted tweet.</string>
    <string name="oauth_explain">login Twitter via below button and activate \'aoeliyakei\'. And then, copy PIN code and return to this app.</string>
    <string name="oauth_pin_direction">input PIN code and send it.</string>

    <string name="settings_title_sensitive">hide sensitive thumbnail</string>
    <string name="settings_key_sensitive" translatable="false">key_hide_sensitive_thumb</string>
    <bool name="settings_sensitive_default">true</bool>
    <string name="settings_key_loginUser" translatable="false">key_login_user</string>
    <string name="settings_title_loginUser">login account on launching</string>
    <string name="settings_loginUser_default" translatable="false">-1</string>
    <string name="settings_title_version">version</string>
    <string name="settings_key_version" translatable="false">key_version</string>
    <string name="title_share">share</string>
    <string-array name="settings_loginUser_entries">
        <item>last logged in</item>
    </string-array>
    <string-array name="settings_loginUser_values">
        <item>@string/settings_loginUser_default</item>
    </string-array>

    <string name="iffab_menu_title_fav">fav</string>
    <string name="iffab_menu_title_rt">RT</string>
    <string name="iffab_menu_title_fav_rt">fav/RT</string>
    <string name="iffab_menu_title_quote">Quote</string>
    <string name="iffab_menu_title_reply">reply</string>
    <string name="iffab_menu_title_detail">detail</string>
    <string name="iffab_menu_title_show_conversation">show conversation</string>
    <string name="iffab_menu_title_delete">delete</string>
</resources>
