...
        android:id="@+id/iffabMenu_main_detail"
        android:icon="@drawable/ic_menu"
        android:orderInCategory="180"
        android:title="@string/iffab_menu_title_detail"
        />
    <item
        android:id="@+id/iffabMenu_main_conv"
        android:icon="@drawable/ic_forum"
        android:orderInCategory="225"
        android:title="@string/iffab_menu_title_show_conversation"
        />
    <item
        android:id="@+id/iffabMenu_main_delete"
...
